Added parameter documentation for every instruction